Fantasy Real Estate Core Package/force-app/main/default/objects/Opportunity/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <label>Bed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>