Fantasy Real Estate Core Package/force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>