Fantasy Real Estate Core Package/force-app/main/default/objects/Opportunity/fields/Picture_1__c.field-meta.xml
<CustomField>
    <fullName>Picture_1__c</fullName>
    <label>Picture 1</label>
    <type>Url</type>
</CustomField>