Fantasy Real Estate Core Package/force-app/main/default/objects/Opportunity/fields/Picture_2__c.field-meta.xml
<CustomField>
    <fullName>Picture_2__c</fullName>
    <label>Picture 2</label>
    <type>Url</type>
</CustomField>