Fantasy Real Estate Core Package/force-app/main/default/objects/Opportunity/fields/Picture_3__c.field-meta.xml
<CustomField>
    <fullName>Picture_3__c</fullName>
    <label>Picture 3</label>
    <type>Url</type>
</CustomField>